# staticcheck-codegen

./: README.md  def.bzl  go.mod  go.sum  main.go  nogo_config.json
_gen/qf1001/: analyzer.go
_gen/qf1002/: analyzer.go
_gen/qf1003/: analyzer.go
_gen/qf1004/: analyzer.go
_gen/qf1005/: analyzer.go
_gen/qf1006/: analyzer.go
_gen/qf1007/: analyzer.go
_gen/qf1008/: analyzer.go
_gen/qf1009/: analyzer.go
_gen/qf1010/: analyzer.go
_gen/qf1011/: analyzer.go
_gen/qf1012/: analyzer.go
_gen/s1000/: analyzer.go
_gen/s1001/: analyzer.go
_gen/s1002/: analyzer.go
_gen/s1003/: analyzer.go
_gen/s1004/: analyzer.go
_gen/s1005/: analyzer.go
_gen/s1006/: analyzer.go
_gen/s1007/: analyzer.go
_gen/s1008/: analyzer.go
_gen/s1009/: analyzer.go
_gen/s1010/: analyzer.go
_gen/s1011/: analyzer.go
_gen/s1012/: analyzer.go
_gen/s1016/: analyzer.go
_gen/s1017/: analyzer.go
_gen/s1018/: analyzer.go
_gen/s1019/: analyzer.go
_gen/s1020/: analyzer.go
_gen/s1021/: analyzer.go
_gen/s1023/: analyzer.go
_gen/s1024/: analyzer.go
_gen/s1025/: analyzer.go
_gen/s1028/: analyzer.go
_gen/s1029/: analyzer.go
_gen/s1030/: analyzer.go
_gen/s1031/: analyzer.go
_gen/s1032/: analyzer.go
_gen/s1033/: analyzer.go
_gen/s1034/: analyzer.go
_gen/s1035/: analyzer.go
_gen/s1036/: analyzer.go
_gen/s1037/: analyzer.go
_gen/s1038/: analyzer.go
_gen/s1039/: analyzer.go
_gen/s1040/: analyzer.go
_gen/sa1000/: BUILD.bazel  analyzer.go
_gen/sa1001/: BUILD.bazel  (+1 more)
_gen/sa1028/: BUILD.bazel  analyzer.go
_gen/st1022/: BUILD.bazel  analyzer.go
(+202 files in other folders)
