# gazelle:ignore
load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

go_tool_library(
    name = "go_tool_library",
    srcs = ["analyzer.go"],
    importpath = "github.com/sluongng/staticcheck-codegen/_gen/st1022",
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//stylecheck",
        "@org_golang_x_tools//go/analysis:go_tool_library",
    ],
)